# CPP-Semestral

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  flake.nix  project.md
src/headers/: BlockHeader.h
src/sources/: main.cpp
